<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.w2m.infrastructure</groupId>
        <artifactId>starter-project-app</artifactId>
        <version>10.1.1</version>
    </parent>
    <groupId>es.w2m.finance.disputes</groupId>
    <artifactId>w2m-disputes-back</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>w2m-disputes-back</name>
    <description>w2m-disputes backend service</description>

    <properties>
        <apache.poi.version>5.2.1</apache.poi.version>
    </properties>

    <dependencies>

        <!-- Corporate dependencies -->
        <dependency>
            <groupId>com.w2m.infrastructure</groupId>
            <artifactId>starter-rest-api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.w2m.infrastructure</groupId>
            <artifactId>starter-rest-client</artifactId>
        </dependency>

        <!-- Spring Boot dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>

        <!-- Third party dependencies-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${apache.poi.version}</version>
        </dependency>

        <!-- Library Snowflake api -->
        <dependency>
            <groupId>es.w2m.finance.disputes</groupId>
            <artifactId>lib-snowflake</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
